# cosmic-app-template

./: .gitignore  Cargo.toml  README.md  justfile
i18n/en/: cosmic_app_template.ftl
i18n/es-MX/: cosmic_app_template.ftl
res/: com.example.CosmicAppTemplate.desktop  com.example.CosmicAppTemplate.metainfo.xml  flatpak.mainifest.yml
src/: app.rs  main.rs
src/core/: localization.rs  mod.rs
